--- a/appuser/templates/user/profile.html
+++ b/appuser/templates/user/profile.html
@@ -2,11 +2,6 @@
 {% block title %}Profil{% endblock title %}
 {% block content %}
 <style>
-    .list-group-item::before,
-    .list-group-item::after {
-        display: none !important;
-        content: none !important;
-    }
 </style>
 <div class="container py-4">
 
@@ -96,7 +91,7 @@
           <button type="submit" class="btn btn-primary w-100">Adresleri Güncelle</button>
         </form>
 
-        <ul class="list-group mt-3">
+        <ul class="list-group mt-3" style="margin-top:1.5rem;">
           {% for addr in user.address %}
           <li class="list-group-item d-flex justify-content-between align-items-center {% if user.current_address == forloop.counter0 %}active{% endif %}">
             {{ addr }}
