--- a/need/templates/need/base.html
+++ b/need/templates/need/base.html
@@ -209,7 +209,7 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div> 
-                <a href="/" class="nav_logo"> <i class="bi nav_icon bi-layers-fill" ></i> <span class="nav_logo-name">NAV</span> </a>
+                <a href="/" class="nav_logo"> <i class="bi nav_icon bi-layers-fill" ></i> <span class="nav_logo-name">SITE ADI</span> </a>
                 <div class="nav_list"> 
                     <a href="/" class="nav_link"> <i class="bi nav_icon bi-view-list" ></i> <span class="nav_name">Liste</span> </a> 
                     <a href="/user/profile/" class="nav_link"><i class="bi nav_icon bi-person" ></i> <span class="nav_name">Profil</span> </a>
