--- a/need/templates/need/offer.html
+++ b/need/templates/need/offer.html
@@ -2,9 +2,10 @@
 {% block title %}Bağış Teklifi{% endblock title %}
 {% block content %}
 
+
 <div class="container mt-4">
     <div class="row">
-        <div class="col-8 offset-md-2">
+        <div class="col-8 offset-md-2" style="margin:auto;">
             <div class="card">
                 <div class="card-header">
                     <h4 class="mb-0">Bağış Teklifi</h4>
