--- a/appuser/templates/user/profile.html
+++ b/appuser/templates/user/profile.html
@@ -62,6 +62,7 @@
             </div>
 
             <button class="btn btn-primary w-100 mt-3">Kaydet</button>
+            <a href="{% url 'user:change_password' %}">Şifre Değiştir</a>
         </form>
 
       </div>
