--- a/need/templates/need/base.html
+++ b/need/templates/need/base.html
@@ -243,7 +243,7 @@
 
 
     <div class="container pt-4" style="margin-top:60px;">
-        <h1 class="text-center">{% block title %}{% endblock title %}</h1>
+        <h1 class="text-center mb-3">{% block title %}{% endblock title %}</h1>
         <div class="content">
             {% block content %}{% endblock content %}
         </div>
