--- a/need/templates/need/base.html
+++ b/need/templates/need/base.html
@@ -227,8 +227,8 @@
                     {% if 'user_delete' in user_permissions or 'user_information' in user_permissions %}
                         <a href="/user/users/" class="nav_link"> <i class="bi nav_icon bi-people-fill text-danger" ></i> <span class="nav_name text-danger">Kullanıcılar</span> </a>
                     {% endif %}
-                    {% if 'offer_update' in user_permissions or 'user_information' in user_permissions %}
-                        <a href="/courier/requests/" class="nav_link"> <i class="bi bi-bus-front text-danger "></i><span class="nav_name text-danger">Kullanıcılar</span> </a>
+                    {% if 'offer_update' in user_permissions %}
+                        <a href="/courier/requests/" class="nav_link"> <i class="bi bi-bus-front text-danger "></i><span class="nav_name text-danger">Taşıyıcı</span> </a>
                     {% endif %}
 
                     
