--- a/appuser/static/css/style.css
+++ b/appuser/static/css/style.css
@@ -194,7 +194,23 @@ a:hover {
     box-shadow: 0 0 10px rgba(40, 167, 69, 0.4) !important;
     transform: translateY(-2px) !important;
 }
+.btn-outline-secondary {
+    color: #6c757d !important;               /* Secondary rengi */
+    border: 1px solid #6c757d !important;    /* Kenarlık secondary */
+    background-color: transparent !important;
+    padding: 0.375rem 0.75rem !important;
+    font-size: 1rem !important;
+    border-radius: 0.25rem !important;
+    transition: all 0.15s ease-in-out !important;
+}
 
+.btn-outline-secondary:hover,
+.btn-outline-secondary:focus {
+    color: #fff !important;                  /* Yazı rengi beyaz */
+    background-color: #6c757d !important;    /* Arka plan secondary */
+    border-color: #6c757d !important;        /* Kenarlık secondary */
+    text-decoration: none !important;
+}
 
 /* Formlar */
 .form-control,
